# BillBot

./: Cargo.toml
src/: lib.rs
src/models/: mod.rs
src/services/: mod.rs
